[package]
name = "stackable-lib"
description = "A library to interact with Stackable Data Platform installations"
authors = ["Stackable GmbH <info@stackable.tech>"]
license = "Apache-2.0"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/stackabletech/stackable-lib"

[dependencies]
k8s-openapi = { version = "0.17", default-features = false, features = ["v1_26"] }
kube = { version = "0.80", default-features = false, features = ["client", "openssl-tls"] } # Using openssl (and not native-tls) as kube-rs team tries to move away from native-tls
snafu = "0.7"

[dev-dependencies]
tokio = { version = "1.26", features = ["full"] }
